# MCTSChess

./: Cargo.toml  README.md
ARCHIVE/: checkers.rs  connect4.rs
benches/: my_benchmark.rs
src/: chess.rs  compile_time_constants.rs  fen_parsing.rs  go.rs  lib.rs  main.rs  min_max.rs  movegen.rs  pext_consts.rs  tree.rs
