[package]
name = "mcts-chess"
version = "0.1.0"
authors = ["Cedric Brendel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"lazy_static" = "1.4.0"
"rand" = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
